=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0
 - Fixed: [ 1835731 ] Favorites summary doesn't work -> fv_gid too short (fisharebest)
 - Fixed: [ 1968304 ] favorites - fv_gid too short (fisharebest)
 - Removed: Not-working secondary reorder (horiz) link in Album Tab page Header area (windmillway)
 - Added: [ 2264855 ] Show more details of paste items (fisharebest)

Version 4.1.6
 - Fixed: [ 2287009 ] 4.1.6 User Cleanup Errors (canajun2eh)
 - Fixed: [ 2275930 ] See approved change only after page refresh (fisharebest)
 - Fixed: [ 2281694 ] [4276] D1 in Tree View (kiwi_pgv)
 - Fixed: Errors in language file editor (canajun2eh)
 - Fixed: [ 2275792 ] Top search - innn - Privacy in Raw Updating (fisharebest)
 - Fixed: Media Viewer "relates to" table doesn't obey "show last change" option in GEDCOM config (canajun2eh)
 - Fixed: [ 2251169 ] Error Adding FAQ entry (canajun2eh)
 - Changed: Improvements to Media upload and Media editing (canajun2eh)
 - Fixed: [ 2003907 ] Redundancy info, "On This Day" block (fisharebest)
 - Added: Improvement to Notes positioning and appearance when enlarged Lightbox Image Notes icon is clicked. (windmillway)
 - Fixed: [ 2217714 ] Changes to Thumbnail Behavior for Non-Images (windmillway)
 - Fixed: [ 2156359 ] Recent Changes Block Not Sorted by Time (fisharebest)
 - Fixed: [ 2193279 ] Merge trouble with upper/lower case (fisharebest)
 - Added: Support for Romanian language (canajun2eh)
 - Changed: Installation Wizard, Step 4, when using IE produces incorrect page format (canajun2eh)
 - Fixed: [ 2173838 ] New family not shown on relationship tab (opus27)
 - Changed: Use normal page headers when editing existing site config (canajun2eh)
 - Fixed: [ 2193733 ] Installation Wizard won't complete (canajun2eh)