@@ -10,6 +10,7 @@
 
 
 Version 4.2.0
+ - Fixed: [ 2275883 ] Wrong thumbnail path using Media Firewall (canajun2eh)
  - Fixed: [ 1835731 ] Favorites summary doesn't work -> fv_gid too short (fisharebest)
  - Fixed: [ 1968304 ] favorites - fv_gid too short (fisharebest)
  - Removed: Not-working secondary reorder (horiz) link in Album Tab page Header area (windmillway)
